--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
     "express-validator": "^7.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.5.1",
     "sharp": "^0.32.6",
-    "fluent-ffmpeg": "^2.1.3",
     "slugify": "^1.6.6",
     "uuid": "^10.0.0"
   },
